--- a/Final_Project/Keras_model.ipynb
+++ b/Final_Project/Keras_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "moral-hanging",
+   "id": "little-instrumentation",
    "metadata": {},
    "source": [
     "## Stroke modeling with Keras"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "emerging-criticism",
+   "id": "silent-occupation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "bigger-microphone",
+   "id": "lucky-poster",
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "quality-being",
+   "id": "introductory-newsletter",
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "square-processor",
+   "id": "photographic-russian",
    "metadata": {},
    "outputs": [
     {
@@ -467,8 +467,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "honest-bibliography",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "id": "moved-composition",
+   "id": "proved-nancy",
    "metadata": {},
    "source": [
     "### Create Train and Test data sets for each data set"
@@ -477,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "affecting-macedonia",
+   "id": "bulgarian-joshua",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "sealed-zoning",
+   "id": "bearing-advancement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "simplified-budapest",
+   "id": "careful-macedonia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +534,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "breeding-incidence",
+   "id": "determined-plenty",
    "metadata": {},
    "source": [
     "### Create new data set with random over and under sampling"
@@ -535,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "chemical-abuse",
+   "id": "honey-bermuda",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "lesbian-settlement",
+   "id": "unsigned-medicine",
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +594,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "statistical-selection",
+   "id": "incoming-darkness",
    "metadata": {},
    "source": [
     "**Raw data, over and under sampling**"
@@ -595,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "durable-venue",
+   "id": "crazy-mercury",
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +627,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "twelve-treaty",
+   "id": "brilliant-semiconductor",
    "metadata": {},
    "source": [
     "**Normed data, over and under sampling**"
@@ -628,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "marine-release",
+   "id": "third-equilibrium",
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "elementary-turkish",
+   "id": "rural-symphony",
    "metadata": {},
    "source": [
     "**Scaled data, over and under sampling**"
@@ -661,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "heard-cambridge",
+   "id": "nearby-consortium",
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +693,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unlike-providence",
+   "id": "finished-olympus",
    "metadata": {},
    "source": [
     "### Create new data set with SMOTEEN"
@@ -694,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "internal-turkey",
+   "id": "ruled-serial",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +718,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "agreed-prior",
+   "id": "boolean-moment",
    "metadata": {},
    "source": [
     "**Raw data, SMOTEEN**"
@@ -719,7 +727,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "fifteen-gossip",
+   "id": "norman-louisiana",
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +746,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "surgical-wilson",
+   "id": "fitted-pizza",
    "metadata": {},
    "source": [
     "**Normalized data, SMOTEEN**"
@@ -747,7 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "atomic-blend",
+   "id": "stopped-problem",
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +774,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "formal-novel",
+   "id": "sapphire-organizer",
    "metadata": {},
    "source": [
     "**Scaled data, SMOTEEN**"
@@ -775,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "under-struggle",
+   "id": "senior-white",
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +802,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "italian-attempt",
+   "id": "patent-pearl",
    "metadata": {},
    "source": [
     "## Simple Logistic Regression to compare"
@@ -803,7 +811,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "educated-barbados",
+   "id": "future-scanner",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "civic-range",
+   "id": "polar-redhead",
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "extensive-lightweight",
+   "id": "animal-liechtenstein",
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +887,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "unlikely-doctor",
+   "id": "protective-medicine",
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "dated-intelligence",
+   "id": "polar-delivery",
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +937,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "north-romania",
+   "id": "voluntary-guidance",
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +961,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "liberal-joseph",
+   "id": "turned-bikini",
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +987,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "attended-washer",
+   "id": "patient-sunrise",
    "metadata": {},
    "outputs": [
     {
@@ -1003,7 +1011,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "boolean-principle",
+   "id": "quiet-apparatus",
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1042,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "average-stupid",
+   "id": "current-baker",
    "metadata": {},
    "outputs": [
     {
@@ -1065,7 +1073,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "terminal-standing",
+   "id": "twenty-chaos",
    "metadata": {},
    "outputs": [
     {
@@ -1119,7 +1127,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "committed-sampling",
+   "id": "acute-employee",
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1161,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "comparative-socket",
+   "id": "broadband-circus",
    "metadata": {},
    "outputs": [
     {
@@ -1187,7 +1195,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "seven-pennsylvania",
+   "id": "endless-contractor",
    "metadata": {},
    "outputs": [
     {
@@ -1210,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "sound-latino",
+   "id": "first-realtor",
    "metadata": {},
    "outputs": [
     {
@@ -1241,7 +1249,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "compliant-registrar",
+   "id": "changing-brake",
    "metadata": {},
    "outputs": [
     {
@@ -1261,8 +1269,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 195,
+   "id": "reported-oliver",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.18092877,  1.92034162,  0.23838581,  0.2714037 , -0.00416373,\n",
+       "        -0.06605773,  0.66203399, -0.05068571, -0.39502637, -0.07505169,\n",
+       "         0.06365918, -0.05889108,  0.09041746, -0.26327729, -0.16072952]])"
+      ]
+     },
+     "execution_count": 195,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lr_best_model.coef_"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "secret-farmer",
+   "id": "front-cliff",
    "metadata": {},
    "source": [
     "## Keras"
@@ -1271,7 +1302,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "municipal-niger",
+   "id": "nonprofit-posting",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1284,7 +1315,7 @@
   {
    "cell_type": "code",
    "execution_count": 189,
-   "id": "governmental-milwaukee",
+   "id": "indian-space",
    "metadata": {},
    "outputs": [
     {
@@ -1422,7 +1453,7 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "id": "nuclear-payday",
+   "id": "tracked-square",
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1481,7 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "billion-yield",
+   "id": "behind-custody",
    "metadata": {},
    "outputs": [
     {
@@ -1481,7 +1512,7 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "id": "dramatic-columbus",
+   "id": "foreign-litigation",
    "metadata": {},
    "outputs": [
     {
@@ -1625,7 +1656,7 @@
   {
    "cell_type": "code",
    "execution_count": 193,
-   "id": "cross-biography",
+   "id": "executed-circumstances",
    "metadata": {},
    "outputs": [
     {
@@ -1653,7 +1684,7 @@
   {
    "cell_type": "code",
    "execution_count": 194,
-   "id": "written-diabetes",
+   "id": "functional-parallel",
    "metadata": {},
    "outputs": [
     {
@@ -1684,7 +1715,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mineral-spice",
+   "id": "raising-miniature",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1692,7 +1723,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "african-columbia",
+   "id": "square-laugh",
    "metadata": {},
    "outputs": [
     {
@@ -1726,7 +1757,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "professional-spanking",
+   "id": "hourly-maryland",
    "metadata": {},
    "outputs": [
     {
@@ -1747,7 +1778,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "underlying-donor",
+   "id": "formal-retro",
    "metadata": {},
    "outputs": [],
    "source": []
