--- a/Final_Project/Stroke_Preprocessing.ipynb
+++ b/Final_Project/Stroke_Preprocessing.ipynb
@@ -3436,7 +3436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "mature-separate",
+   "id": "welsh-chess",
    "metadata": {},
    "source": [
     "#### Descriptive Data Plots"
@@ -3444,8 +3444,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "demographic-mission",
+   "execution_count": 61,
+   "id": "bronze-charles",
    "metadata": {},
    "outputs": [
     {
@@ -3459,15 +3459,6 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -3477,14 +3468,14 @@
     "plt.xlabel(\"Age\")\n",
     "plt.ylabel('Count')\n",
     "plt.title(\"Frequency of Age for Stroke Patients\")\n",
-    "plt.show()\n",
-    "plt.savefig(\"Freq_stroke_age.png\")"
+    "plt.savefig(\"Freq_stroke_age.jpeg\")\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "convertible-softball",
+   "execution_count": 62,
+   "id": "integral-allergy",
    "metadata": {},
    "outputs": [
     {
@@ -3498,15 +3489,6 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -3514,14 +3496,14 @@
     "plt.xlabel(\"Age\")\n",
     "plt.ylabel('Count')\n",
     "plt.title(\"Frequency of Age for Non-Stroke Patients\")\n",
-    "plt.show()\n",
-    "plt.savefig(\"Freq_NONstroke_age.png\")"
+    "plt.savefig(\"Freq_NONstroke_age.jpeg\")\n",
+    "plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "actual-authorization",
+   "id": "fleet-bidding",
    "metadata": {},
    "outputs": [],
    "source": []
