cleaned up notebooks

--- a/Final_Project/Stroke_Preprocessing.ipynb
+++ b/Final_Project/Stroke_Preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "accomplished-adelaide",
+   "id": "chief-webcam",
    "metadata": {},
    "source": [
     "# Stroke data preprocessing and visualization"
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "secondary-formula",
+   "id": "impressed-neighborhood",
    "metadata": {},
    "source": [
     "#### Outlier - Gender\n",
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "neural-messaging",
+   "id": "surprised-figure",
    "metadata": {},
    "source": [
     "#### Age Outliers\n",
@@ -326,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "infrared-cartoon",
+   "id": "civic-retail",
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tropical-brain",
+   "id": "falling-organic",
    "metadata": {},
    "source": [
     "#### Examine the stroke patients"
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "coupled-burlington",
+   "id": "accessory-relative",
    "metadata": {},
    "source": [
     "#### Stroke patients without a BMI (bmi == null) \n",
@@ -1696,7 +1696,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "developed-hanging",
+   "id": "varying-stadium",
    "metadata": {
     "scrolled": true
    },
@@ -2902,7 +2902,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "worse-peninsula",
+   "id": "documented-afghanistan",
    "metadata": {},
    "outputs": [
     {
@@ -3897,7 +3897,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ideal-radar",
+   "id": "bibliographic-favor",
    "metadata": {},
    "source": [
     "### Check features for correlation"
@@ -3957,7 +3957,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ongoing-machine",
+   "id": "postal-spiritual",
    "metadata": {},
    "source": [
     "### Analyze feature important with Lasso regression\n",
@@ -4014,8 +4014,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "verbal-green",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'gender': 0.0,\n",
+       " 'age': 0.18905438793942383,\n",
+       " 'hypertension': 0.03572437833823248,\n",
+       " 'heart_disease': 0.04772756399230873,\n",
+       " 'ever_married': -0.015264896755969943,\n",
+       " 'Residence_type': 0.0029091185957340806,\n",
+       " 'avg_glucose_level': 0.061745619443731026,\n",
+       " 'bmi': -0.0,\n",
+       " 'work_type_Govt_job': -0.0,\n",
+       " 'work_type_Private': 0.012732459981490593,\n",
+       " 'work_type_Self-employed': -0.0,\n",
+       " 'smoking_status_Unknown': -0.0,\n",
+       " 'smoking_status_formerly smoked': 0.0,\n",
+       " 'smoking_status_never smoked': -0.005758928441149643,\n",
+       " 'smoking_status_smokes': 0.0}"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features_coef = zip(X.columns, lasso_coef)\n",
+    "dict(features_coef)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "varying-advancement",
+   "id": "valid-christianity",
    "metadata": {},
    "source": [
     "## Descriptive Data Plots"
@@ -4024,7 +4060,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "grand-remove",
+   "id": "local-twelve",
    "metadata": {},
    "outputs": [
     {
@@ -4054,7 +4090,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "higher-restoration",
+   "id": "immediate-lodge",
    "metadata": {},
    "outputs": [
     {
@@ -4084,7 +4120,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "industrial-trinidad",
+   "id": "shared-makeup",
    "metadata": {},
    "outputs": [
     {
@@ -4114,7 +4150,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "mounted-ranch",
+   "id": "accomplished-invitation",
    "metadata": {},
    "outputs": [
     {
@@ -4144,7 +4180,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "latin-discipline",
+   "id": "royal-customer",
    "metadata": {},
    "outputs": [
     {
@@ -4172,7 +4208,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "enabling-karen",
+   "id": "tutorial-print",
    "metadata": {},
    "outputs": [
     {
@@ -4202,7 +4238,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "appointed-rotation",
+   "id": "regulated-peter",
    "metadata": {},
    "outputs": [
     {
@@ -4230,7 +4266,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "rental-university",
+   "id": "instant-touch",
    "metadata": {},
    "outputs": [
     {
