--- a/Final_Project/Stroke_Preprocessing.ipynb
+++ b/Final_Project/Stroke_Preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "chief-webcam",
+   "id": "accepting-workshop",
    "metadata": {},
    "source": [
     "# Stroke data preprocessing and visualization"
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "impressed-neighborhood",
+   "id": "natural-eight",
    "metadata": {},
    "source": [
     "#### Outlier - Gender\n",
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "surprised-figure",
+   "id": "proud-guard",
    "metadata": {},
    "source": [
     "#### Age Outliers\n",
@@ -326,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "civic-retail",
+   "id": "employed-gabriel",
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "falling-organic",
+   "id": "aerial-language",
    "metadata": {},
    "source": [
     "#### Examine the stroke patients"
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accessory-relative",
+   "id": "conceptual-jamaica",
    "metadata": {},
    "source": [
     "#### Stroke patients without a BMI (bmi == null) \n",
@@ -1696,7 +1696,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "varying-stadium",
+   "id": "governing-productivity",
    "metadata": {
     "scrolled": true
    },
@@ -2902,7 +2902,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "documented-afghanistan",
+   "id": "square-great",
    "metadata": {},
    "outputs": [
     {
@@ -3897,7 +3897,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bibliographic-favor",
+   "id": "acceptable-purchase",
    "metadata": {},
    "source": [
     "### Check features for correlation"
@@ -3957,10 +3957,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "postal-spiritual",
+   "id": "under-fantasy",
    "metadata": {},
    "source": [
-    "### Analyze feature important with Lasso regression\n",
+    "### Analyze feature importance with Lasso regression\n",
     "\n",
     "Used a few different alpha to tease out feature importance on normalized data."
    ]
@@ -4016,7 +4016,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "verbal-green",
+   "id": "computational-painting",
    "metadata": {},
    "outputs": [
     {
@@ -4051,7 +4051,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "valid-christianity",
+   "id": "demanding-nerve",
    "metadata": {},
    "source": [
     "## Descriptive Data Plots"
@@ -4060,7 +4060,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "local-twelve",
+   "id": "touched-suspension",
    "metadata": {},
    "outputs": [
     {
@@ -4090,7 +4090,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "immediate-lodge",
+   "id": "separated-swiss",
    "metadata": {},
    "outputs": [
     {
@@ -4120,7 +4120,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "shared-makeup",
+   "id": "religious-harrison",
    "metadata": {},
    "outputs": [
     {
@@ -4150,7 +4150,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "accomplished-invitation",
+   "id": "circular-cameroon",
    "metadata": {},
    "outputs": [
     {
@@ -4180,7 +4180,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "royal-customer",
+   "id": "level-daughter",
    "metadata": {},
    "outputs": [
     {
@@ -4208,7 +4208,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "tutorial-print",
+   "id": "harmful-found",
    "metadata": {},
    "outputs": [
     {
@@ -4238,7 +4238,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "regulated-peter",
+   "id": "qualified-impossible",
    "metadata": {},
    "outputs": [
     {
@@ -4266,7 +4266,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "instant-touch",
+   "id": "cleared-bottom",
    "metadata": {},
    "outputs": [
     {
